--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.1</version>
-            <scope>test</scope>
-        </dependency> 
+          <type>jar</type>
+       </dependency> 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
